# serialize

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-clang-windows.yml  cmake-gcc-ubuntu.yml  cmake-msvc-windows.yml
benchmark/: CMakeLists.txt  benchmark_common.hpp  benchmark_main.cpp  fox_serialize_benchmark.hpp  hand_written_benchmark.hpp
include/: CMakeLists.txt
include/fox/: serialize.hpp
sample/: CMakeLists.txt  main.cpp  sample_aggregate_types.cpp  sample_containers.cpp  sample_custom_0.cpp  sample_custom_1.cpp  sample_custom_2.cpp  sample_custom_3.cpp  sample_custom_4.cpp  sample_trivial_types.cpp
test/: CMakeLists.txt  serialize_test.cc
